--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -39,7 +39,7 @@ html {
 }
 
 body {
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Noto Serif', serif;
     color: #333;
     line-height: 1.6;
 }
@@ -47,6 +47,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     padding: 0;
     line-height: 1.25;
+    font-family: "Fira Sans", Sans-Serif;
 }
 
 h1 {
@@ -82,7 +83,7 @@ h4, h5, h6 {
 p {
     margin: 1rem 0;
     padding: 0;
-    text-align: justify;
+    text-align: left;
 }
 
 blockquote {
@@ -243,6 +244,7 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    font-family: "Fira Sans", Sans-Serif;
 }
 
 .head ul ul {
