--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -297,6 +297,7 @@ body {
     list-style: none;
     margin: 5px 0;
     padding: 0;
+    font-family: "Fira Sans", Sans-Serif;
 }
 
 .foot ul ul {
